--- a/order.html
+++ b/order.html
@@ -7,195 +7,179 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đơn hàng</title>
     <style>
-        @import url(prj.css);
+        @import url(./CSS/prj.css);
     </style>
+    <link rel="stylesheet" href="../IMAGES/ICONS/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
-    <!-- header -->
-    <ul class="header__navbar--list">
-        <li class="header__navbar--item name-studio">Tách Studio</li>
-        <li class="header__navbar--item">
-            <a href="" class="header__navbar--icons--link">
-                <i class="header__navbar--icons fas fa-home"></i>
-            </a>
-        </li>
-        <li class="header__navbar--item">
-            <a href="" class="header__navbar--item--link">Cho thuê</a>
-        </li>
-        <li class="header__navbar--item">
-            <a href="" class="header__navbar--item--link">Album</a>
-        </li>
-        <li class="header__navbar--item">
-            <a href="" class="header__navbar--item--link">Blog</a>
-        </li>
-        <li class="header__navbar--item ">
-            <div class="search">
-                <input type="text" placeholder="nhập từ tìm kiếm" class="input">
-                <i class="header__navbar--icons fas fa-xs fa-search"></i>
-            </div>
+    <div class="website">
 
-        </li>
-        <li class="header__navbar--item">
-            <a href="" class="header__navbar--item--link"><img src="./../hinhanh/profile 2.png" alt=""
-                    class="header__img"></a>
-        </li>
-    </ul>
 
-    <h2 class="center">TRẠNG THÁI ĐƠN HÀNG</h2>
-    <div class="container--body">
-        <div class="container--user">
-            <div class="block block--user--r1">
-                <div class="flex--container--user">
-                    <div class="flex--container--left"><img id="profile" src="./Images/beach.png"></div>
-                    <div class="flex--container--col">
-                        <div class="flex--item" id="username">Ngocs</div>
-                        <div class="flex--item">
-                            <!--Chỉnh sửa hồ sơ-->
-                            <div class="block">
-                                <div class="flex--container">
-                                    <img id="edit" src="Images/write.png">
-                                    <span>Chỉnh sửa thông tin</span>
-                                </div>
-
-                            </div>
+        <!-- header -->
+        <div id="page__header--container">
+            <ul class="page__header--text">
+                <li><a href="#">Tách Studio</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+                <li><a href="#">Cho thuê</a>
+                    <ul>
+                        <li><a href="#" style="color: black;">Máy ảnh</a></li>
+                        <li><a href="#" style="color: black;">Studio</a></li>
+                        <li><a href="#" style="color: black;">Trang phục</a></li>
+                    </ul>
+                </li>
+                <li><a href="#album">Album</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#"> <span class="glyphicon glyphicon-search header__icon"></span> <input type="text"
+                            placeholder="Nhập từ tìm kiếm">
+                    </a></li>
+                <li><a href="#"><img src="../IMAGES/profile 2.png" alt="" class="header__img"></a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <div class="align"></div>
+            <h2 class="center">TRẠNG THÁI ĐƠN HÀNG</h2>
+            <div class="datthue__flex">
+                <div class="datthue--left">
+                    <!--container--user-->
+                    <div class="datthue__profile">
+                        <img src="../IMAGES/profile.png" alt="" class="img">
+                        <div class="datthue--name">
+                            <p class="name">Ngocs</p>
+                            <p class="font__size"><i class="fas fa-edit"></i>Chỉnh sửa hồ sơ</p>
                         </div>
                     </div>
+                    <hr>
+                    <div class="datthue__bottom">
+                        <div class="datthue--item">
+                            <p>
+                                <i class="fas fa-user"></i>
+                                Tài khoản của tôi
+                            </p>
+                        </div>
+                        <div class="datthue--item">
+                            <p><i class="fas fa-shopping-cart"></i>
+                                Đặt thuê</p>
+                        </div>
+                        <div class="datthue--item">
+                            <p><i class="fas fa-bell"></i>
+                                Thông báo</p>
+                        </div>
+                        <div class="datthue--item">
+                            <p><i class="fas fa-percentage"></i>
+                                Khuyến mãi</p>
 
-                </div>
-            </div>
-            <div class="block--user">
-                <div class="flex--menu">
-                    <a href="#">
-                        <img class="icon" src="Images/user.png">
-                        <span>Tài khoản của tôi</span>
-                    </a>
-                </div>
-            </div>
-            <div class="block--user">
-                <div class="flex--menu">
-                    <a href="#">
-                        <img class="icon" src="Images/shopping-cart.png">
-                        <span>Đặt thuê</span>
-                    </a>
-                </div>
-            </div>
-            <div class="block--user">
-                <div class="flex--menu">
-                    <a href="#">
-                        <img class="icon" src="Images/notification.png">
-                        <span>Thông báo</span>
-                    </a>
-                </div>
-            </div>
-            <div class="block--user">
-                <div class="flex--menu">
-                    <a href="#">
-                        <img class="icon" src="Images/discount-voucher.png">
-                        <span>Khuyến mãi</span>
-                    </a>
-                </div>
-            </div>
-            <div class="block--user">
-                <div class="flex--menu">
-                    <a href="#">
-                        <img class="icon" src="Images/logout.png">
-                        <span>Đăng xuất</span>
-                    </a>
-                </div>
-            </div>
-        </div> <!-- thanh trang cá nhân -->
-        <div class="flex--container container--order">
-            <!-- box trạng thái đơn hàng -->
-            <div class="block block__item--tab">
-                <!--Thanh tab block-->
-                <div class="flex--container--tab bold">
-                    <div class="tab--item">
-                        <a href="#">
-                            Tất cả
-                        </a>
-                    </div>
-                    <div class="tab--item">
-                        <a href="#">
-                            Đang chờ thanh toán
-                        </a>
-                    </div>
-                    <div class="tab--item">
-                        <a href="#">
-                            Đã thanh toán
-                        </a>
+                        </div>
+                        <div class="datthue--item">
+                            <p><i class="fas fa-sign-out-alt"></i>
+                                Đăng xuất</p>
+
+                        </div>
                     </div>
                 </div>
 
-            </div>
-            <div class="block block__item--title">
-                <!--Thanh header block-->
-                <div class="flex--container bold">
-                    <!-- flex box chứa nội dung tite -->
-                    <div class="flex__item order--date">Ngày đặt thuê</div>
-                    <div class="flex__item order--name">Sản phẩm/Dịch vụ</div>
-                    <div class="flex__item order--status">Trạng thái</div>
+                <!-- thanh trang cá nhân -->
+                <div class="datthue--right">
+                   
+                    <!-- box trạng thái đơn hàng -->
+                    <div class="block block__item--tab">
+                        <!--Thanh tab block-->
+                        <div class="flex--container--tab bold">
+                            <div class="tab--item">
+                                <a href="#">
+                                    Tất cả
+                                </a>
+                            </div>
+                            <div class="tab--item">
+                                <a href="#">
+                                    Đang chờ thanh toán
+                                </a>
+                            </div>
+                            <div class="tab--item">
+                                <a href="#">
+                                    Đã thanh toán
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="block block__item--title">
+                        <!--Thanh header block-->
+                        <div class="flex--container bold">
+                            <!-- flex box chứa nội dung tite -->
+                            <div class="flex__item flex__item order--date">Ngày đặt thuê</div>
+                            <div class="flex__item flex__item order--name">Sản phẩm/Dịch vụ</div>
+                            <div class="flex__item flex__item order--status">Trạng thái</div>
+                        </div>
+                    </div>
+                    <div class="block block__item--content">
+                        <!--Thanh content block-->
+                        <div class="flex--container">
+                            <!-- flex box chứa nội dung -->
+                            <div class="flex__item order--date">20/11/2021</div>
+                            <div class="flex__item order--name">Combo Studio Green House</div>
+                            <div class="flex__item bold color--green order--status">Đã thanh toán</div>
+                        </div>
+                    </div>
+                    <div class="block block__item--content">
+                        <!--Thanh content block-->
+                        <div class="flex--container">
+                            <!-- flex box chứa nội dung -->
+                            <div class="flex__item order--date">22/11/2021</div>
+                            <div class="flex__item order--name">Studio Chill</div>
+                            <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
+                        </div>
+                    </div>
+                    <div class="block block__item--content">
+                        <!--Thanh content block-->
+                        <div class="flex--container">
+                            <!-- flex box chứa nội dung -->
+                            <div class="flex__item order--date">22/11/2021</div>
+                            <div class="flex__item order--name">Studio Chill</div>
+                            <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
+                        </div>
+                    </div>
+                    <div class="block block__item--content">
+                        <!--Thanh content block-->
+                        <div class="flex--container">
+                            <!-- flex box chứa nội dung -->
+                            <div class="flex__item order--date">22/11/2021</div>
+                            <div class="flex__item order--name">Studio Chill</div>
+                            <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
+                        </div>
+                    </div>
+                    <div class="block block__item--content">
+                        <!--Thanh content block-->
+                        <div class="flex--container">
+                            <!-- flex box chứa nội dung -->
+                            <div class="flex__item order--date">22/11/2021</div>
+                            <div class="flex__item order--name">Studio Chill</div>
+                            <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
+                        </div>
+                    </div>
+                    <div class="block block--more"><a class="button" href="#">Xem thêm...</a></div>
+
                 </div>
             </div>
-            <div class="block block__item--content">
-                <!--Thanh content block-->
-                <div class="flex--container">
-                    <!-- flex box chứa nội dung -->
-                    <div class="flex__item order--date">20/11/2021</div>
-                    <div class="flex__item order--name">Combo Studio Green House</div>
-                    <div class="flex__item bold color--green order--status">Đã thanh toán</div>
-                </div>
-            </div>
-            <div class="block block__item--content">
-                <!--Thanh content block-->
-                <div class="flex--container">
-                    <!-- flex box chứa nội dung -->
-                    <div class="flex__item order--date">22/11/2021</div>
-                    <div class="flex__item order--name">Studio Chill</div>
-                    <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
-                </div>
-            </div>
-            <div class="block block__item--content">
-                <!--Thanh content block-->
-                <div class="flex--container">
-                    <!-- flex box chứa nội dung -->
-                    <div class="flex__item order--date">22/11/2021</div>
-                    <div class="flex__item order--name">Studio Chill</div>
-                    <div class="flex__item bold color--red order--status">Đang chờ thanh toán</div>
-                </div>
-            </div>
-            <div class="block block--more"><a class="button" href="#">Xem thêm...</a></div>
 
         </div>
-    </div>
-
-    <!-- footer -->
-    <div class="contact">
-        <div class="left-contact">
-            <div class="title">TÁCH STUDIO</div>
-            <div class="footer__left--item">
-                <span>UEL, Tp Thủ Đức, Tp Hồ Chí Minh</span><br>
-                <span>Call us: 0123456789</span><br>
-                <span>tachstudio@gmail.com</span>
+        <!-- footer -->
+        <div class="page__footer--container footer__text">
+            <div class="footer--left">
+                <p class="footer__header">TÁCH STUDIO</p>
+                <p>UEL, Tp Thủ Đức, Tp Hồ Chí Minh <br>
+                    Call us: 0123456789 <br>
+                    tachstudio@gmail.com
+                </p>
+                <p>Copyright @2021 Tách Creative Studio</p>
             </div>
-            <p>Copyright @2021 Tách Creative Studio</p>
 
-        </div>
-        <div class="right-contact">
-            <div>
-                <div class="title">LIÊN HỆ VỚI CHÚNG TÔI</div>
-                <div>
-                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                    <span><i>Tách studio</i></span>
-                </div>
-                <div>
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <span><i>tach.studio</i></span>
-                </div>
-                <div>
-                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                    <span><i>Tách Studio Official</i></span>
-                </div>
+            <div class="footer--right">
+                <p class="footer__header">LIÊN HỆ VỚI CHÚNG TÔI</p>
+                <p> <img src="../IMAGES/footer-fb.png" alt=""> Tách studio</p>
+                <p> <img src="../IMAGES/footer-ins.png" alt=""> tach.studio</p>
+                <p> <img src="../IMAGES/footer-ytb.png" alt=""> Tách Studio Official</p>
             </div>
         </div>
     </div>
