--- a/homepage.html
+++ b/homepage.html
@@ -1,193 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="/html/css/homepage.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/HTML/CSS/style.css">
-</head>
+    <link rel="stylesheet" href="./CSS/homepage.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
+  </head>
 
-<body class="body__color">
+  <body class="body__color">
     <div class="Page__Header--Container">
-        <div class="Page__Header--Tach">Tách studio</div>
-
-        <div class="Page__Header--Title"><i class="glyphicon glyphicon-home"></i></div>
-
-        <div class="Page__Header--Title Page__Header--Dropdown">
-            Cho thuê
-            <div class="dropdown-content">
-                <a href="#">Máy ảnh</a>
-                <a href="#">Studio</a>
-                <a href="#">Trang phục</a>
-            </div>
+      <div class="Page__Header--Tach">Tách studio</div>
+      <div class="Page__Header--Title">
+        <i class="glyphicon glyphicon-home"></i>
+      </div>
+      <div class="Page__Header--Title Page__Header--Dropdown">
+        Cho thuê
+        <div class="dropdown-content">
+          <a href="#">Máy ảnh</a>
+          <a href="#">Studio</a>
+          <a href="#">Trang phục</a>
         </div>
-
-        <div class="Page__Header--Title"><a href="#album">Album</a></div>
-
-        <div class="Page__Header--Title">Blog</div>
-
-        <div class="Page__Header--Icon ">
-            <span class="glyphicon glyphicon-search Page__Header--Icon2"></span>
-            <input class="Page__Header--Search" type="text" placeholder="Nhập từ tìm kiếm">
-        </div>
-        
-        <div class="Page__Header--Title">Đăng nhập</div>
+      </div>
+      <div class="Page__Header--Title">
+        <a href="/HTML/homepage.html#album">Album</a>
+      </div>
+      <div class="Page__Header--Title">Blog</div>
+      <div class="Page__Header--Icon">
+        <span class="glyphicon glyphicon-search Page__Header--Icon2"></span>
+        <input
+          class="Page__Header--Search"
+          type="text"
+          placeholder="Nhập từ tìm kiếm"
+        />
+      </div>
+      <div class="Page__Header--Title">Đăng nhập</div>
     </div>
 
     <div class="home__header--banner">
-        <img src="/images/banner.png" alt="">
+      <img src="/images/banner.png" alt="" />
     </div>
 
     <div class="home__header--introduction">
-        <div class="introduction--1">
-            <div class="introduction--para">
-                <span class="introduction--header">
-                    Tách Studio - Amazing Space for you!
-                </span> <br> <br>
-                Tách studio là địa điểm cho thuê studio chụp ảnh, studio quay phim tại Hồ Chí Minh nằm trong căn
-                tập
-                thể
-                xinh hết ý nằm trên làng Đại học quốc gia Tp. HCM. Căn nhà bé bé nhưng ngập nắng và ánh sáng, có
-                chiếc
-                ban
-                công xinh xinh, có ô cửa gỗ cũ cũ...
-                <br> <br>
-                Tách là không gian sáng tạo đáp ứng đầy đủ nhu cầu thuê studio quay phim - chụp ảnh, thuê phòng
-                chụp
-                ảnh
-                nghệ thuật, thuê thiết bị chụp ảnh, chụp thời trang, ảnh sản phẩm, ảnh kỉ niệm, ảnh cưới... của
-                nhiều khách
-                hàng. Đa dạng về bối cảnh, phong phú đồ Decor, linh động trong từng concept, ánh sáng tự nhiên
-                tốt,
-                thiết bị
-                hỗ trợ hiện đại... sẽ là chất liệu tốt nhất để các ekip sở hữu những bộ hình ấn tượng, cá tính.
-            </div>
+      <div class="introduction--1">
+        <div class="introduction--para">
+          <span class="introduction--header">
+            Tách Studio - Amazing Space for you!
+          </span>
+          <br />
+          <br />
+          Tách studio là địa điểm cho thuê studio chụp ảnh, studio quay phim tại
+          Hồ Chí Minh nằm trong căn tập thể xinh hết ý nằm trên làng Đại học
+          quốc gia Tp. HCM. Căn nhà bé bé nhưng ngập nắng và ánh sáng, có chiếc
+          ban công xinh xinh, có ô cửa gỗ cũ cũ...
+          <br />
+          <br />
+          Tách là không gian sáng tạo đáp ứng đầy đủ nhu cầu thuê studio quay
+          phim - chụp ảnh, thuê phòng chụp ảnh nghệ thuật, thuê thiết bị chụp
+          ảnh, chụp thời trang, ảnh sản phẩm, ảnh kỉ niệm, ảnh cưới... của nhiều
+          khách hàng. Đa dạng về bối cảnh, phong phú đồ Decor, linh động trong
+          từng concept, ánh sáng tự nhiên tốt, thiết bị hỗ trợ hiện đại... sẽ là
+          chất liệu tốt nhất để các ekip sở hữu những bộ hình ấn tượng, cá tính.
         </div>
-
-        <div class="introduction--2">
-            <img src="/images/intro-image.jpg" alt="">
-        </div>
+      </div>
+      <div class="introduction--2">
+        <img src="/images/intro-image.jpg" alt="" />
+      </div>
     </div>
 
     <div class="home__body--service">
-        <h1 class="body__header--1">DỊCH VỤ CỦA TÁCH STUDIO</h1>
-        <div class="body__service">
-            <div class="service__item">
-                <img src="/images/service-room.jpg" alt="">
-                <div>Cho thuê studio</div>
-                <input type="text" value="Đặt thuê">
-            </div>
-
-            <div class="service__item">
-                <img src="/images/service-camera.jpg" alt="">
-                <div>Cho thuê máy ảnh</div>
-                <input type="text" value="Đặt thuê">
-            </div>
-
-            <div class="service__item">
-                <img src="/images/service-clothes.jpg" alt="">
-                <div>Cho thuê trang phục</div>
-                <input type="text" value="Đặt thuê">
-            </div>
+      <h1 class="body__header--1">DỊCH VỤ CỦA TÁCH STUDIO</h1>
+      <div class="body__service scrollbar" id="scrollbar--style">
+        <div class="service__item">
+          <img src="/images/service-room.jpg" alt="" />
+          <div>
+            <p>Cho thuê studio</p>
+            <input type="button" value="Đặt thuê" />
+          </div>
         </div>
+        <div class="service__item">
+          <img src="/images/service-camera.jpg" alt="" />
+          <div>
+            <p>Cho thuê máy ảnh</p>
+            <input type="button" value="Đặt thuê" />
+          </div>
+        </div>
+        <div class="service__item">
+          <img src="/images/service-clothes.jpg" alt="" />
+          <div>
+            <p>Cho thuê trang phục</p>
+            <input type="button" value="Đặt thuê" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="home__body--album" id="album">
-        <h1 class="body__header--1">ALBUM CỦA TÁCH STUDIO</h1>
-        <div class="body__album">
-            <div class="album__item">
-                <img src="/images/album-kyyeu.jpg" alt="">
-                <div>Chụp ảnh kỷ yếu</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-cuoi.jpg" alt="">
-                <div>Chụp ảnh cưới</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-art.jpg" alt="">
-                <div>Chụp ảnh nghệ thuật</div>
-            </div>
+      <h1 class="body__header--1">ALBUM CỦA TÁCH STUDIO</h1>
+      <div class="body__album scrollbar" id="scrollbar--style">
+        <div class="album__item">
+          <img src="/images/album-kyyeu.jpg" alt="" />
+          <div>Chụp ảnh kỷ yếu</div>
         </div>
-
-        <div class="body__album">
-            <div class="album__item">
-                <img src="/images/album-newborn.jpg" alt="">
-                <div>Chụp ảnh newborn</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-family.jpg" alt="">
-                <div>Chụp ảnh gia đình</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-child.jpg" alt="">
-                <div>Chụp ảnh bé yêu</div>
-            </div>
+        <div class="album__item">
+          <img src="/images/album-cuoi.jpg" alt="" />
+          <div>Chụp ảnh cưới</div>
         </div>
-
-        <div class="body__album">
-            <div class="album__item">
-                <img src="/images/album-chandung.jpg" alt="">
-                <div>Chụp ảnh chân dung</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-mebau.jpg" alt="">
-                <div>Chụp ảnh bầu</div>
-            </div>
-
-            <div class="album__item">
-                <img src="/images/album-product.jpg" alt="">
-                <div>Chụp ảnh sản phẩm</div>
-            </div>
+        <div class="album__item">
+          <img src="/images/album-art.jpg" alt="" />
+          <div>Chụp ảnh nghệ thuật</div>
         </div>
+        <div class="album__item">
+          <img src="/images/album-newborn.jpg" alt="" />
+          <div>Chụp ảnh newborn</div>
+        </div>
+        <div class="album__item">
+          <img src="/images/album-family.jpg" alt="" />
+          <div>Chụp ảnh gia đình</div>
+        </div>
+        <div class="album__item">
+          <img src="/images/album-child.jpg" alt="" />
+          <div>Chụp ảnh bé yêu</div>
+        </div>
+        <div class="album__item">
+          <img src="/images/album-chandung.jpg" alt="" />
+          <div>Chụp ảnh chân dung</div>
+        </div>
+        <div class="album__item">
+          <img src="/images/album-mebau.jpg" alt="" />
+          <div>Chụp ảnh bầu</div>
+        </div>
+        <div class="album__item">
+          <img src="/images/album-product.jpg" alt="" />
+          <div>Chụp ảnh sản phẩm</div>
+        </div>
+      </div>
     </div>
 
     <div class="home__body--space">
-        <h1 class="body__header--1">KHÔNG GIAN TÁCH STUDIO</h1>
-        <div class="body__space">
-            <div class="space__item">
-                <img src="/images/space-codien.jpg" alt="">
-                <div>Studio cổ điển</div>
-            </div>
-
-            <div class="space__item">
-                <img src="/images/space-tet.jpg" alt="">
-                <div>Studio ngày Tết</div>
-            </div>
-
-            <div class="space__item">
-                <img src="/images/space-toigian.jpg" alt="">
-                <div>Studio tối giản</div>
-            </div>
+      <h1 class="body__header--1">KHÔNG GIAN TÁCH STUDIO</h1>
+      <div class="body__space scrollbar" id="scrollbar--style">
+        <div class="space__item">
+          <img src="/images/space-codien.jpg" alt="" />
+          <div>Studio cổ điển</div>
         </div>
-        <p class="body__space--more"><a href="">Xem thêm...</a></p>
+        <div class="space__item">
+          <img src="/images/space-tet.jpg" alt="" />
+          <div>Studio ngày Tết</div>
+        </div>
+        <div class="space__item">
+          <img src="/images/space-toigian.jpg" alt="" />
+          <div>Studio tối giản</div>
+        </div>
+      </div>
+      <p class="body__space--more"><a href="">Xem thêm...</a></p>
     </div>
 
     <div class="page__footer--container footer__text">
-        <div class="footer--left">
-            <p class="footer__header">TÁCH STUDIO</p>
-            <p>UEL, Tp Thủ Đức, Tp Hồ Chí Minh <br>
-                Call us: 0123456789 <br>
-                tachstudio@gmail.com
-            </p>
-            <p>Copyright @2021 Tách Creative Studio</p>
-        </div>
-
-        <div class="footer--right">
-            <p class="footer__header">LIÊN HỆ VỚI CHÚNG TÔI</p>
-            <p> <img src="/images/footer-fb.png" alt=""> Tách studio</p>
-            <p> <img src="/images/footer-ins.png" alt=""> tach.studio</p>
-            <p> <img src="/images/footer-ytb.png" alt=""> Tách Studio Official</p>
-        </div>
+      <div class="footer--left">
+        <p class="footer__header">TÁCH STUDIO</p>
+        <p>
+          UEL, Tp Thủ Đức, Tp Hồ Chí Minh <br />
+          Call us: 0123456789 <br />
+          tachstudio@gmail.com
+        </p>
+        <p>Copyright @2021 Tách Creative Studio</p>
+      </div>
+      <div class="footer--right">
+        <p class="footer__header">LIÊN HỆ VỚI CHÚNG TÔI</p>
+        <p><img src="/images/footer-fb.png" alt="" /> Tách studio</p>
+        <p><img src="/images/footer-ins.png" alt="" /> tach.studio</p>
+        <p><img src="/images/footer-ytb.png" alt="" /> Tách Studio Official</p>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
