--- a/login2.html
+++ b/login2.html
@@ -20,19 +20,24 @@
                     <form class="login-form">
                         <div class="form-group">
                             <label for="input--email" class="bold form--label">Username: </label>
-                            <input type="text" class="form__input" placeholder="Tên đăng nhập" id="input--email" required>
+                            <input type="text" class="form__input" placeholder="Tên đăng nhập" id="input--email"
+                                required>
 
                             <label for="input--pwd" class="bold form--label">Password: </label>
                             <input type="password" class="form__input" placeholder="********" id="input--pwd" required>
-
-                            <button type="submit" class="button" id="button--login">ĐĂNG NHẬP</button>
-                            <p class="center">HOẶC ĐĂNG NHẬP VỚI</p>
-                            <a href="#" class="social-button button" id="facebook-connect"> <span>Facebook</span></a>
-                            <a href="#" class="social-button button" id="google-connect"> <span>Google</span></a>
+                            <div class="center">
+                                <button type="submit" class="button" id="button--login">ĐĂNG NHẬP</button>
+                                <p class="center">HOẶC ĐĂNG NHẬP VỚI</p>
+                                <div class="buttonother">
+                                    <a href="#" class=" social-button" id="facebook-connect">
+                                        <span>Facebook</span></a>
+                                    <a href="#" class="social-button" id="google-connect">
+                                        <span>Google</span></a>
+                                </div>
+                            </div>
+                            <p class="center form-group">Bạn chưa có tài khoản? <a href="#" class="dnthave bold">Tạo tài
+                                    khoản</a></p>
                         </div>
-                        <p class="center form-group">Bạn chưa có tài khoản? <a href="#" class="dnthave bold">Tạo tài
-                                khoản</a></p>
-
                     </form>
                 </div>
 
