--- a/TrangCaNhan.html
+++ b/TrangCaNhan.html
@@ -15,15 +15,14 @@
       rel="stylesheet"
       href="/IMAGES/ICONS/fontawesome-free-5.15.4-web/css/all.min.css"
     />
+    <script src="/html/js/javascript.js" defer></script>
   </head>
   <body>
     <div class="Page__Header--Container">
       <div class="Page__Header--Tach">Tách studio</div>
-
       <div class="Page__Header--Title">
         <i class="glyphicon glyphicon-home"></i>
       </div>
-
       <div class="Page__Header--Title Page__Header--Dropdown">
         Cho thuê
         <div class="dropdown-content">
@@ -32,13 +31,10 @@
           <a href="#">Trang phục</a>
         </div>
       </div>
-
       <div class="Page__Header--Title" id="color">
         <a href="/HTML/homepage.html#album">Album</a>
       </div>
-
       <div class="Page__Header--Title">Blog</div>
-
       <div class="Page__Header--Icon">
         <span class="glyphicon glyphicon-search Page__Header--Icon2"></span>
         <input
@@ -47,75 +43,49 @@
           placeholder="Nhập từ tìm kiếm"
         />
       </div>
-
       <div class="Page__Header--Ava">
         <img src="/images/avatar-2.png" alt="" />
       </div>
     </div>
 
     <div class="body__container">
-      <div class="body__container--left container--style">
-        <div class="left__item--1">
-          <div class="left__item--ava">
-            <img src="/images/avatar-2.png" alt="" />
-          </div>
-          <div class="left__item--name">
-            <h2>Ngocs</h2>
-            <p><i class="fas fa-edit"></i> Chỉnh sửa hồ sơ</p>
-          </div>
-        </div>
-
-        <hr />
-
-        <div class="left__item--2">
-          <p><i class="fas fa-user icon"></i>Tài khoản của tôi</p>
-        </div>
-        <div class="left__item--2">
-          <p><i class="fas fa-shopping-cart icon"></i>Đặt thuê</p>
-        </div>
-        <div class="left__item--2">
-          <p><i class="fas fa-bell icon"></i>Thông báo</p>
-        </div>
-        <div class="left__item--2">
-          <p><i class="fas fa-percentage icon"></i>Khuyến mãi</p>
-        </div>
-        <div class="left__item--2">
-          <p><i class="fas fa-sign-out-alt icon"></i>Đăng xuất</p>
-        </div>
+      <h2>Tài khoản của tôi</h2>
+      <div class="body__item--1">
+        <img src="/images/avatar-2.png" alt="" />
       </div>
-
-      <div class="body__container--right container--style">
-        <h2>Tài khoản của tôi</h2>
-        <div class="right__item--1">
-          <img src="/images/avatar-2.png" alt="" />
-        </div>
-        <div class="right__item--2">
-          <h1>Ngocs</h1>
-          <h2>Điểm tích lũy: 02</h2>
-        </div>
-        <hr />
-        <div class="right__item--2">
-          <h2>Thông tin cá nhân</h2>
-          <p>Họ và tên: Dương Phạm Diễm Quỳnh</p>
-          <p>Số điện thoại: 0123456789</p>
-          <p>Email: quynhduong@gmail.com</p>
-        </div>
-        <hr />
-        <div class="right__item--3">
-          <h2>Đơn hàng của tôi</h2>
-          <div class="item__image">
-            <div>
-              <img src="/images/personal-chothanhtoan.png" alt="" />
-              <p>Chờ thanh toán</p>
-            </div>
-            <div>
-              <img src="/images/personal-dahoantat.png" alt="" />
-              <p>Đã hoàn tất</p>
-            </div>
-            <div>
-              <img src="/images/personal-xemtatca.png" alt="" />
-              <p>Xem tất cả</p>
-            </div>
+      <div class="body__item--2">
+        <h1 id="tenDangNhap"></h1>
+        <p class="body__cursor" id="chinhSua">
+          <i class="fas fa-edit body__icon--edit"></i>Chỉnh sửa hồ sơ
+        </p>
+        <h2>Điểm tích lũy: <span id="diemTichLuy"></span></h2>
+      </div>
+      <hr />
+      <div class="body__item--2">
+        <h2>Thông tin cá nhân</h2>
+        <p>Họ và tên: <span id="hoTen"></span></p>
+        <p>Số điện thoại: <span id="soDienThoai"></span></p>
+        <p>Email: <span id="email"></span></p>
+      </div>
+      <hr />
+      <div class="body__item--3">
+        <h2>Đơn hàng của tôi</h2>
+        <div class="function__container">
+          <div id="datThue">
+            <i class="fas fa-shopping-cart fa-2x"></i>
+            <p>Đặt thuê</p>
+          </div>
+          <div id="thongBao">
+            <i class="fas fa-bell fa-2x"></i>
+            <p>Thông báo</p>
+          </div>
+          <div id="khuyenMai">
+            <i class="fas fa-percentage fa-2x"></i>
+            <p>Khuyến mãi</p>
+          </div>
+          <div id="dangXuat">
+            <i class="fas fa-sign-out-alt fa-2x"></i>
+            <p>Đăng xuất</p>
           </div>
         </div>
       </div>
