--- a/homepage.html
+++ b/homepage.html
@@ -41,11 +41,9 @@
       </div>
       <div class="Page__Header--Title">Đăng nhập</div>
     </div>
-
     <div class="home__header--banner">
       <img src="/images/banner.png" alt="" />
     </div>
-
     <div class="home__header--introduction">
       <div class="introduction--1">
         <div class="introduction--para">
@@ -72,7 +70,6 @@
         <img src="/images/intro-image.jpg" alt="" />
       </div>
     </div>
-
     <div class="home__body--service">
       <h1 class="body__header--1">DỊCH VỤ CỦA TÁCH STUDIO</h1>
       <div class="body__service scrollbar" id="scrollbar--style">
@@ -99,7 +96,6 @@
         </div>
       </div>
     </div>
-
     <div class="home__body--album" id="album">
       <h1 class="body__header--1">ALBUM CỦA TÁCH STUDIO</h1>
       <div class="body__album scrollbar" id="scrollbar--style">
@@ -141,7 +137,6 @@
         </div>
       </div>
     </div>
-
     <div class="home__body--space">
       <h1 class="body__header--1">KHÔNG GIAN TÁCH STUDIO</h1>
       <div class="body__space scrollbar" id="scrollbar--style">
@@ -158,9 +153,10 @@
           <div>Studio tối giản</div>
         </div>
       </div>
-      <p class="body__space--more"><a href="">Xem thêm...</a></p>
+      <p class="body__space--more">
+        <a href="/html/Chuchothue.html#choThue">Xem thêm...</a>
+      </p>
     </div>
-
     <div class="page__footer--container footer__text">
       <div class="footer--left">
         <p class="footer__header">TÁCH STUDIO</p>
